# trader

./: BTCUSDT_1m.csv  BTCUSDT_1m_with_rsi_14.csv  README.md  aggregate_example.py  aggregated_dataframe.py  base_dataframe.py  binance_websocket.py  constants.py  daos.py  dataframe.py  main.py  models.py  pyproject.toml  signal_generator.py  ta_calculator.py  test_binance_ws.py  top_gainers_20250821_112050.csv  top_gainers_listed_20250821_112747.csv  top_gainers_listed_20250821_180042.csv  top_gainers_listed_20250821_190856.csv  top_gainers_listed_20250821_191944.csv  top_gainers_listed_20250821_193420.csv  top_gainers_listed_20250821_215154.csv  top_gainers_listed_20250822_091117.csv  top_gainers_listed_20250822_150451.csv  top_gainers_listed_20250822_185109.csv  top_gainers_listed_20250823_065444.csv  top_gainers_listed_20250823_085209.csv  top_gainers_listed_20250823_093054.csv  top_gainers_listed_20250823_094034.csv  top_gainers_listed_20250823_094755.csv  top_gainers_listed_20250823_095156.csv  top_gainers_listed_20250823_095357.csv  top_gainers_listed_20250823_100015.csv  top_gainers_listed_20250823_100836.csv  top_gainers_listed_20250823_100914.csv  top_gainers_listed_20250823_101604.csv  top_gainers_listed_20250823_102419.csv  top_gainers_listed_20250823_103846.csv  top_gainers_listed_20250823_104529.csv  (+76 more)
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  config.ts
frontend/src/components/: ConnectionStatus.tsx  DataTable.tsx
frontend/src/hooks/: useWebSocket.ts
jobs/: get_historical_data.py  get_top_gainers.py  ta.py
(+1 files in other folders)
