[project]
name = "trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "ruff>=0.12.8",
    "setuptools>=80.9.0",
    "ta-lib>=0.6.5",
    "uvicorn>=0.35.0",
    "websockets>=12.0",
]
